[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blackboxes"
version = "03.24"
authors = [
  { name="Dietmar Wilhelm Weiss", email="dietmar.wilhelm.weiss@gmail.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/blackboxes/blackboxes"
Issues = "https://github.com/blackboxes/blackboxes/issues"
