[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blackboxes"
version = "2024.0.0a1"
authors = [
  { name="Dietmar Wilhelm Weiss", email="dietmar.wilhelm.weiss@gmail.com" },
]
dependencies = ['numpy', 'matplotlib', 'scipy', 'neurolab', 'torch', 'keras']
dynamic = ["version"]
description = ""
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/blackboxes/blackboxes"
Issues = "https://github.com/blackboxes/blackboxes/issues"
